--- a/sgbank/pom.xml
+++ b/sgbank/pom.xml
@@ -50,5 +50,13 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.17</version>
 		</dependency>
+
+		<!-- Mockito -->
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>2.7.5</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
